# Scavenger

./: .gitignore
stellar-contract/: Cargo.toml
stellar-contract/src/: errors.rs  events.rs  lib.rs  test_transfer_path_validation.rs  types.rs  validation.rs
stellar-contract/test_snapshots/: test_all_waste_types_can_be_registered.1.json  test_all_waste_types_retrievable.1.json  test_all_waste_types_tracked_in_stats.1.json  test_batch_material_submission_and_verification.1.json  test_bulk_collection_transfer.1.json  test_chain_with_multiple_collectors.1.json  test_complete_recycler_to_collector_to_manufacturer_flow.1.json  test_confirm_deactivated_waste_fails.1.json  test_confirm_nonexistent_waste_fails.1.json  test_confirmation_event_emission.1.json  test_confirmation_event_sequence.1.json  test_confirmer_updates_correctly.1.json  test_deactivate_already_deactivated_waste.1.json  test_deactivate_waste.1.json  test_deactivate_waste_by_admin.1.json  test_deactivate_waste_non_admin.1.json  test_deactivated_waste_cannot_be_confirmed.1.json  test_deactivated_waste_cannot_be_transferred.1.json  test_deactivated_waste_not_counted_in_totals.1.json  test_deregistered_cannot_transfer_v2.1.json  test_distribution_with_collector.1.json  test_distribution_with_custom_percentages.1.json  test_donate_zero_amount.1.json  test_double_confirmation_fails.1.json  test_empty_batch_submit.1.json  test_exact_budget_exhaustion.1.json  test_exact_minimum_weight.1.json  test_extreme_coordinates.1.json  test_gas_batch_medium.1.json  test_gas_batch_small.1.json  test_gas_batch_verification.1.json  (+158 more)
(+126 files in other folders)
